# restaurant-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  run.sh  schema.sql  test.sh
sql/: data.sql  drop.sql  schema.sql  test-data.sql
src/: lib.rs  main.rs
src/data/: connection.rs  entity.rs  mod.rs  repository.rs
src/routes/: menu_items.rs  mod.rs  response.rs  tables.rs
src/services/: menu_items.rs  mod.rs  tables.rs
src/utils/: error.rs
tests/: api_tests.rs
