[package]
name = "restaurant-api"
version = "0.1.0"
authors = ["Cyril Guerard <guerard.cyril@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
#lazy_static = "1.4.0"
riker = "0.4"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "sqlite_pool"]